Created a function to initialize the application with a default search value and added a footer to the layout.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </iframe>
         <div class="wiki-info container"></div>
     </main>
-
+<footer> The Project Was Made By Dan Weibren </footer>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/servic/storage-service.js"></script>
     <script src="js/servic/wiki-service.js"></script>
