Added feature to display searched values in the footer.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </iframe>
         <div class="wiki-info container"></div>
     </main>
-<footer> The Project Was Made By Dan Weibren </footer>
+    <footer> Already searched for: <span class="searched-for"></span> </footer>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/servic/storage-service.js"></script>
     <script src="js/servic/wiki-service.js"></script>
