--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </iframe>
         <div class="wiki-info container"></div>
     </main>
-    <footer> Already searched for: <span class="searched-for"></span> </footer>
+    <footer> Already searched for: <span class="searched-for"></span><button class="clear-storage" onclick="onClearStorage()">Clear</button> </footer>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/servic/storage-service.js"></script>
     <script src="js/servic/wiki-service.js"></script>
